[package]
name = "business-days"
version = "0.1.0"
edition = "2021"
description = "Adds helper functions to easily work with business dates and holidays"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/business-days"
repository = "https://github.com/StephanvanSchaik/business-days"

[dependencies]
computus = "1"
jiff = "0.2.5"
thiserror = "2.0"
